--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,39 +1,16 @@
 .Header {
-    width: 100%;
-    background-color: rgb(255, 255, 255);
-    position: fixed;
-    top: 0px;
-    right: auto;
-    z-index: 1100;
+    display: flex;
+    min-height: 48px;
+    padding: 16px 24px;
+    background-color: rgba(255, 255, 255, 0.72);
+    position: sticky;
+    top: 0;
 
     .toolbar {
-        display: flex;
-        align-items: center;
-        min-height: 48px;
-        padding: 16px 24px;
-
-        .logo {
-            width: 228px;
-            font-size: 32px;
-            font-weight: 700;
-        }
-
-        .menu {
-            display: flex;
-            border-radius: 27px;
-            margin-left: auto;
-            background-color: rgb(227, 242, 253);
-            transition: all 0.2s ease-in-out 0s;
-            .img {
-                width: 34px;
-                height: 34px;
-                border: none;
-            }
-        }
-
-        .menu:hover {
-            cursor: pointer;
-            background: rgb(33, 150, 243)
+        margin-left: auto;
+        .img-user {
+            width: 24px;
+            height: 24px;
         }
     }
 }
