#13. Added popup to profile header

--- a/public/styles/Color.scss
+++ b/public/styles/Color.scss
@@ -5,3 +5,6 @@ $color-base-font: rgb(33, 33, 33);
 $color-menu-item-background: rgb(227, 242, 253);
 $color-menu-font: #616161;
 $color-menu-font-hover: rgb(33, 150, 243);
+
+$color-white: white;
+$color-black: black;
