--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,3 +1,8 @@
+@import "public/styles/Color.scss";
+
+$popup-padding-horizontal: 18px;
+$popup-padding-vertical: 16px;
+
 .Header {
     display: flex;
     min-height: 48px;
@@ -8,9 +13,63 @@
 
     .toolbar {
         margin-left: auto;
-        .img-user {
-            width: 24px;
-            height: 24px;
+     
+        .user {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            .img {
+                width: 24px;
+                height: 24px;
+            }
+        }
+
+        .popup {
+            padding: $popup-padding-vertical $popup-padding-horizontal;
+            position: absolute;
+            inset: 0px 0px auto auto;   
+            transform: translate(-16px, 60px);
+            background-color: $color-white;
+            border-radius: 12px;
+            box-shadow: 1px 4px 16px 8px rgba(0, 0, 0, 0.4);
+
+            .profile {
+                font-size: 16px;
+                font-weight: 600;
+                padding-bottom: $popup-padding-vertical;
+                border-bottom: 1px solid $color-base-line;
+                
+                .nickname {
+                    margin-left: 5px;
+                }
+            }
+
+            .popup-menus {
+                padding-top: 16px;
+            }
+
+            .menu {
+                display: flex;
+                color: $color-menu-font;
+                padding: 8px 12px;
+                border-radius: 12px;
+
+                .menu-icon {
+                    display: flex;
+                    align-items: center;
+                    margin-right: 12px;
+                }
+                
+                .menu-label {
+                    position: relative;
+                    top: 1px;
+                }
+            }
+
+            .menu:hover {
+                color: $color-menu-font-hover;
+                background-color: $color-menu-item-background;
+            }
         }
     }
 }
