--- a/src/components/sidebar/SideBar.scss
+++ b/src/components/sidebar/SideBar.scss
@@ -12,6 +12,7 @@
         align-items: center;
         justify-content: center;
         padding: 16px;
+        margin-bottom: 32px;
         font-size: 18px;
         font-weight: 700;
 
