--- a/src/layout/main/MainLayout.scss
+++ b/src/layout/main/MainLayout.scss
@@ -12,5 +12,6 @@
         min-height: calc(100vh - 48px);
         padding: 20px 24px;
         border-radius: 12px 12px 0px 0px;
+        overflow: auto;
     }
 }
