#13. Added selected to SideBar

--- a/src/components/sidebar/SideBar.scss
+++ b/src/components/sidebar/SideBar.scss
@@ -38,6 +38,7 @@
             align-items: center;
             border-radius: 12px;
             padding: 10px 16px 10px 22px;
+            margin-bottom: 5px;
             color: $color-menu-font;
             transition: none;
 
