--- a/public/styles/Color.scss
+++ b/public/styles/Color.scss
@@ -8,3 +8,9 @@ $color-menu-font-hover: rgb(33, 150, 243);
 
 $color-white: white;
 $color-black: black;
+
+$color-input-label: rgb(158, 158, 158);
+$color-input-background: rgba(145, 158, 171, 0.05);
+
+$color-btn-background: rgb(227, 242, 253);
+$color-btn-background-hover: rgb(33, 150, 243);
