#5. Apply CSS to MemberPage

--- a/public/styles/Color.scss
+++ b/public/styles/Color.scss
@@ -11,6 +11,8 @@ $color-black: black;
 
 $color-input-label: rgb(158, 158, 158);
 $color-input-background: rgba(145, 158, 171, 0.05);
+$color-input-placeholder: rgb(33, 33, 33);
 
 $color-btn-background: rgb(227, 242, 253);
 $color-btn-background-hover: rgb(33, 150, 243);
+
