--- a/src/pages/register/RegisterPage.scss
+++ b/src/pages/register/RegisterPage.scss
@@ -20,10 +20,6 @@
             .sub-title {
                 margin-bottom: 12px;
             }
-
-            .main-title {
-
-            }
         }
     }
 
@@ -38,46 +34,17 @@
             margin-bottom: 18px;
             font-size: 15px;
         }
-        .input {
-            position: relative;
-            width: 100%;
-            padding: 12px 18px 2px 18px;
-            margin-bottom: 12px;
-            border-radius: 12px;
-            border: 1px solid $color-base-line;
-    
-            .label {
-                color: $color-input-label;
-            }
-            
-            input {
-                border: none;
-                background: none;   
-                padding: 0px;
-            }
-        }
+       
         .btn-register {
             width: 100%;
-            height: 35px;
             font-size: 16px;
-            color: $color-btn-background-hover;
-            border: none;
-            background: $color-btn-background;
-        }
-        .btn-register:hover {
-            color: $color-white;
-            background: $color-btn-background-hover;
         }
     }
 
     .footer {
-        .btn-back {
+        .link-back {
             width: 100%;
-            height: 35px;
-            color: $color-black;
-            border: none;
-            background: none;
-            transform: none;
+            font-size: 16px;
         }
     }
 }
