#3. Apply CSS to LessonPage

--- a/public/styles/Size.scss
+++ b/public/styles/Size.scss
@@ -1,1 +1,8 @@
 $size-base-font: 0.875rem;
+
+$font-size-page-title: 1.125rem;
+$font-weight-page-title: 700;
+
+$margin-bottom-modal-header: 32px;
+
+$border-radius-page: 12px;
