--- a/src/pages/lessons/LessonPage.scss
+++ b/src/pages/lessons/LessonPage.scss
@@ -1,7 +1,7 @@
 @import "public/styles/Color.scss";
 @import "public/styles/Size.scss";
 
-.MemberPage {
+.LessonPage {
     width: 100%;
     height: 100%;
     overflow: auto;
@@ -29,9 +29,14 @@
         width: 100%;
         height: 100%;
         display: flex;
+
+        .ant-table-wrapper {
+            width: 100%;
+        }
     }
 
-    .member-modal {
+    .lesson-modal,
+    .transfer-modal {
         .header {
             margin-bottom: $margin-bottom-modal-header;
             border-bottom: 1px solid $color-base-line;
@@ -41,6 +46,14 @@
             justify-content: flex-end;
             
             .btn-modal-add {
+                margin-right: 0px;
+            }
+        }
+    }
+
+    .transfer-modal {
+        .footer {
+            .btn-modal-close {
                 margin-right: 0px;
             }
         }
