--- a/src/pages/dashboard/content.css
+++ b/src/pages/dashboard/content.css
@@ -7,7 +7,6 @@
     display: flex;
     flex-direction: column;
 
-    /* background-color: rgb(177, 193, 255); */
     color: white;
     font-size: 20px;
     gap: 5px;
@@ -15,17 +14,15 @@
 .rowsWrapper {
     width: 100%;
     height: auto;
-    /* background-color: rgb(234, 188, 255); */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    color: rgb(103, 103, 103);
 }
 .part {
     width: 50px;
     height: 30px;
     font-size: 16px;
-    background-color: rgb(245, 223, 255);
-    color: black;
     display: flex;
     justify-content: center;
     align-items: center;
