--- a/src/pages/lessons/LessonPage.scss
+++ b/src/pages/lessons/LessonPage.scss
@@ -8,7 +8,7 @@
     border-radius: $border-radius-page;
     
     .header {
-        padding: 24px;
+        padding: 24px 0px;
         .title {
             font-size: $font-size-page-title;
             font-weight: $font-weight-page-title;
@@ -18,44 +18,11 @@
     .sub-header {
         display: flex;
         justify-content: flex-end;
-
-        .btn-add,
-        .btn-remove {
-            margin-right: 0px;
-        }
     }
 
-    .table {
+    .body {
         width: 100%;
         height: 100%;
         display: flex;
-
-        .ant-table-wrapper {
-            width: 100%;
-        }
-    }
-
-    .lesson-modal,
-    .transfer-modal {
-        .header {
-            margin-bottom: $margin-bottom-modal-header;
-            border-bottom: 1px solid $color-base-line;
-        }
-        .footer {
-            display: flex;
-            justify-content: flex-end;
-            
-            .btn-modal-add {
-                margin-right: 0px;
-            }
-        }
-    }
-
-    .transfer-modal {
-        .footer {
-            .btn-modal-close {
-                margin-right: 0px;
-            }
-        }
     }
 }
