--- a/src/pages/lessons/LessonsPage.scss
+++ b/src/pages/lessons/LessonsPage.scss
@@ -7,6 +7,8 @@
     overflow: auto;
     border-radius: $border-radius-page;
     
+    padding: 24px;
+    
     .header {
         padding: 24px 0px;
         .title {
