--- a/src/components/radio/Radio.scss
+++ b/src/components/radio/Radio.scss
@@ -2,17 +2,36 @@
     .ant-radio-group {
         display: flex;
     }
+    
     .ant-radio-button-wrapper {
         display: flex;
         justify-content: center;
         width: 100%;
         border-left: none;
         border-right: none;
+
+        span {
+            color: rgb(158, 158, 158);
+        }
     }
+    
+    .ant-radio-button-wrapper.ant-radio-button-wrapper-checked {
+        span { 
+            color: white;
+        }
+    }
+    .ant-radio-button-wrapper:hover {
+        background-color: rgb(33, 150, 243);
+        span {
+            color: white;
+        }
+    }
+
     .ant-radio-button-wrapper::before {
         border-left: none;
         border-right: none;
     }
+   
     .ant-radio-button-wrapper:last-child {
         border-right: 1px solid #d9d9d9;
     }
