--- a/src/components/radio/Radio.scss
+++ b/src/components/radio/Radio.scss
@@ -20,7 +20,9 @@
             color: white;
         }
     }
+    
     .ant-radio-button-wrapper:hover {
+        border-color: rgb(33, 150, 243);
         background-color: rgb(33, 150, 243);
         span {
             color: white;
