--- a/src/components/box/Box.scss
+++ b/src/components/box/Box.scss
@@ -6,6 +6,7 @@
     margin-bottom: 12px;
     border-radius: 12px;
     border: 1px solid $color-base-line;
+    overflow: auto;
     
     .label {
         color: $color-box-label;
