Update LessonRegister & LessonOne

--- a/src/pages/lessons/register/LessonRegister.scss
+++ b/src/pages/lessons/register/LessonRegister.scss
@@ -24,4 +24,10 @@
     .body {
         padding: 24px 0px;
     }
+
+    .footer {
+        .btn-register {
+            margin-left: auto;
+        }
+    }
 }
