--- a/src/components/calendar/V2Calendar.scss
+++ b/src/components/calendar/V2Calendar.scss
@@ -2,6 +2,7 @@
     padding: 20px;
     margin-bottom: 10px;
     user-select: none;
+    border-radius: 12px;
     background-color: rgba(145, 158, 171, 1);
     font-family: rotobo;
     height: 350px;
