--- a/src/components/header/v2/V2Header.scss
+++ b/src/components/header/v2/V2Header.scss
@@ -5,6 +5,7 @@
     display: flex;
     width: 100%;
     min-width: 100vw;
+    color: white;
     padding: 24px 20px 16px 20px;
     border-bottom: 1px solid rgba(145, 158, 171, 0.24);
 
@@ -19,7 +20,8 @@
 
         border-radius: 12px;
         // border-right: 1px solid rgba(145, 158, 171, 0.24);
-        background-color: rgba(145, 158, 171, 0.12);
+        // background-color: rgba(145, 158, 171, 0.12);
+        background-color: #a5b3c2;
     }
    
     .menu-item {
