--- a/src/pages/lessons/register/LessonRegister.scss
+++ b/src/pages/lessons/register/LessonRegister.scss
@@ -23,6 +23,19 @@
 
     .body {
         padding: 24px 0px;
+
+        .non-members {
+            
+            .box-body {
+                display: flex;
+            }
+
+            .btn-member {
+                display: flex;
+                margin: 0px 6px 6px 0px;
+                box-shadow: none;
+            }
+        }
     }
 
     .footer {
