--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -41,7 +41,8 @@
     box-shadow: none;
 }
 
-.btn.gray {
+.btn.gray,
+.btn.gray-danger {
     color: #9e9e9e;
     border: 1px solid #d9d9d9;
     background: white;
@@ -54,3 +55,9 @@
     background-color: #3296ed;
 }
 
+.btn.gray-danger.selected,
+.btn.gray-danger:hover {
+    color: white;
+    border: 1px solid #db5a5a;
+    background-color: #db5a5a;
+}
