--- a/src/layout/main/MainLayout.scss
+++ b/src/layout/main/MainLayout.scss
@@ -2,19 +2,20 @@
 @import "public/styles/Color.scss";
 
 .MainLayout {
+    // background-color: darkseagreen;
     display: flex;
     width: 100%;
     height: 100%;
     min-height: 100vh;
-    
+
     .V2Header {
         display: flex;
     }
-    
+
     .container {
         margin: 0 auto;
     }
-    
+
     .content {
         height: 100%;
         min-height: calc(100vh - 48px);
