--- a/src/pages/dashboard/content.css
+++ b/src/pages/dashboard/content.css
@@ -20,17 +20,48 @@
     color: rgb(103, 103, 103);
 }
 .part {
-    width: 50px;
+    width: 100%;
     height: 30px;
     font-size: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* color: gray; */
+
+    background-color: white;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
 }
 .each {
-    width: 50px;
+    width: 100%;
     height: 30px;
     font-size: 16px;
+    color: gray;
+    overflow: hidden;
+
+    background-color: white;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+}
+.each:hover,
+.part:hover {
+    cursor: pointer;
+    color: rgb(123, 174, 255);
+    font-weight: bold;
+}
+.each:active,
+.part:active {
+    cursor: pointer;
+    color: white;
+    font-weight: bold;
+    background-color: rgb(195, 218, 255);
+}
+/* .danger {
+    width: 100%;
+    height: 30px;
+    font-size: 16px;
+    color: blue;
+} */
+.lineUpCenter {
     display: flex;
     justify-content: center;
     align-items: center;
