--- a/src/pages/dashboard/content.css
+++ b/src/pages/dashboard/content.css
@@ -11,6 +11,7 @@
     font-size: 20px;
     gap: 5px;
 }
+
 .rowsWrapper {
     width: 100%;
     height: auto;
@@ -18,7 +19,9 @@
     flex-direction: row;
     justify-content: space-between;
     color: rgb(103, 103, 103);
+    margin-bottom: 4px;
 }
+
 .part {
     width: 100%;
     height: 30px;
@@ -30,6 +33,7 @@
     border-radius: 5px;
     text-align: center;
 }
+
 .each {
     width: 100%;
     height: 30px;
