--- a/src/pages/lessons/LessonsPage.scss
+++ b/src/pages/lessons/LessonsPage.scss
@@ -6,14 +6,15 @@
     height: 100%;
     overflow: auto;
     border-radius: $border-radius-page;
-    
+
     padding: 24px;
-    
+
     .header {
         padding: 24px 0px;
         .title {
             font-size: $font-size-page-title;
             font-weight: $font-weight-page-title;
+            color: rgb(100, 100, 100);
         }
     }
 
