배포된 페이지에서도 작동하는지 확인

--- a/src/pages/lessons/register/LessonRegister.scss
+++ b/src/pages/lessons/register/LessonRegister.scss
@@ -2,30 +2,29 @@
 @import "public/styles/Size.scss";
 
 .LessonRegister {
-
     padding: 24px;
 
     .header {
         display: flex;
         padding: 24px 0px;
-        
+
         .title {
             font-size: $font-size-page-title;
             font-weight: $font-weight-page-title;
+            color: rgb(100, 100, 100);
         }
-        
+
         .link {
             padding: 0px;
             margin: 0px;
             margin-right: 6px;
         }
-    }   
+    }
 
     .body {
         padding: 24px 0px;
 
         .non-members {
-            
             .box-body {
                 display: flex;
             }
